# Snake_QT

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: build.yml  release.yml
docs/: development_documentation.md  project_structure.md
include/: GameWindow.h  Logger.h  SnakeGame.h  SnakeWidget.h
src/: GameWindow.cpp  Logger.cpp  SnakeGame.cpp  SnakeWidget.cpp  main.cpp
